--- a/content/CV.html
+++ b/content/CV.html
@@ -17,8 +17,7 @@ output: html_document
 <div id="conference-presentations" class="section level2">
 <h2>Conference presentations</h2>
 <ul>
-<li><p><strong>2021</strong> “Lifespan change and social mobility: Vowels in Australian English”. <em>Sociolinguistics Symposium in Hong Kong 2021</em> (June 7-10), online.<br />
-</p></li>
+<li><p><strong>2021</strong> “Lifespan change and social mobility: Vowels in Australian English”. <em>Sociolinguistics Symposium in Hong Kong 2021</em> (June 7-10), online.</p></li>
 <li><p><strong>2020a</strong> “Measuring ethnic orientation across corpora and communities” (w. Catherine Travis). <em>Australian Linguistics Society annual conference</em> (December 14-15), online.</p></li>
 <li><p><strong>2020b</strong> “Situating speakers within community change(s): Relative movement across vowels”. <em>Australian Linguistics Society annual conference</em> (December 14-15), online.</p></li>
 <li><p><strong>2020c</strong> “Social Variation in the English of Chinese-Australians” (w. Catherine Travis, James Grama, Gan Qiao and Esther Lee). <em>Forum on Englishes in Australia</em> (December 9), online.</p></li>
@@ -26,6 +25,20 @@ output: html_document
 <li><p><strong>2019b</strong> “Using ethnic orientation to circumscribe the Chinese-Australian speech community in Sydney” (w. Catherine Travis and James Grama). <em>Forum on Englishes in Australia</em> (July 26), La Trobe University.</p></li>
 <li><p><strong>2018</strong> “Who’s likin’ me: three variables in Sydney English” (w. Sarah Crafter) at the <em>Centre of Excellence for the Dynamics of Language</em> at <em>The Australian National University</em>, as part of a Summer Research Scholarship with the Sydney Speaks project. (January 18)</p></li>
 <li><p><strong>2017</strong> “’You just think of annoying girls that don’t shut up’ Perceptions and ideologies of like and youse in Western and Northern Sydney”. <em>Australian Linguistics Society annual conference</em> (December 4-7), University of Sydney.</p></li>
+</ul>
+</div>
+<div id="teaching" class="section level2">
+<h2>Teaching</h2>
+<ul>
+<li><p><strong>2021</strong> <em>Language and Society</em>, Tutor, The Australian National University</p></li>
+<li><p><strong>2018</strong> <em>Language and Social Context</em>, Tutor and guest lecturer, The University of Sydney</p></li>
+<li><p><strong>2017 - 2018</strong> <em>Indigenous Tutorial Assistance Scheme (ITAS)</em>, Tutor, The University of Sydney</p></li>
+</ul>
+</div>
+<div id="workshops" class="section level2">
+<h2>Workshops</h2>
+<ul>
+<li><strong>2021</strong> <em>ARC Centre of Excellence for the Dynamics of Language - ANU Linguistics Seminar Series</em>, <a href="https://youtu.be/81KszuTAw6w">Introduction to Plotting in R</a></li>
 </ul>
 </div>
 <div id="online-contributions" class="section level2">
