Updating CV - conferences

--- a/content/CV.html
+++ b/content/CV.html
@@ -17,7 +17,13 @@ output: html_document
 <div id="conference-presentations" class="section level2">
 <h2>Conference presentations</h2>
 <ul>
-<li><p><strong>2021</strong> “Lifespan change and social mobility: Vowels in Australian English”. <em>Sociolinguistics Symposium in Hong Kong 2021</em> (June 7-10), online.</p></li>
+<li><p><strong>2021a</strong> “Class, gender and ethnic differentiation of pre-nasal TRAP by young Chinese-Australians” (w. Gan Qiao) <em>Australian Linguistics Society annual conference</em> (December 6-9), online.</p></li>
+<li><p><strong>2021b</strong> <a href="https://youtu.be/HgGvOiXMkcg">“Quantifying degree and direction of language change(s) over the lifespan across variables”</a> <em>New Ways of Analyzing Variation 49</em> (October 19-24), online.</p></li>
+</ul>
+<p><em>Winner of the Association for Laboratory Phonology Best Student Paper Award</em></p>
+<ul>
+<li><p><strong>2021c</strong> “Examin(ing) social class in Australia” (w. Catherine Travis, Benjamin Purser and Gan Qiao) <em>Forum on Englishes in Australia</em> (August 27), online.</p></li>
+<li><p><strong>2021d</strong> “Lifespan change and social mobility: Vowels in Australian English”. <em>Sociolinguistics Symposium in Hong Kong 2021</em> (June 7-10), online.</p></li>
 <li><p><strong>2020a</strong> “Measuring ethnic orientation across corpora and communities” (w. Catherine Travis). <em>Australian Linguistics Society annual conference</em> (December 14-15), online.</p></li>
 <li><p><strong>2020b</strong> “Situating speakers within community change(s): Relative movement across vowels”. <em>Australian Linguistics Society annual conference</em> (December 14-15), online.</p></li>
 <li><p><strong>2020c</strong> “Social Variation in the English of Chinese-Australians” (w. Catherine Travis, James Grama, Gan Qiao and Esther Lee). <em>Forum on Englishes in Australia</em> (December 9), online.</p></li>
